# modular-pcf

./: LICENSE  README.md  modular-pcf.cabal  stack.yaml
src/Language/ModPCF/: Environment.hs  Examples.hs  Semantics.hs  Signature.hs  Syntax.hs  TypeCheck.hs  TypeResult.hs
test/: Main.hs
test/Language/ModPCF/Test/: Core.hs  EndToEnd.hs
